# serde-duration-ext

./: Cargo.toml  LICENSE  README.md
src/: durationunit.rs  error.rs  lib.rs  timetunit.rs
